--- a/views/register.pug
+++ b/views/register.pug
@@ -65,7 +65,7 @@ head
             input.form-control(name='age'  type='number')
       // Num input
       .form-group
-        label.col-md-4.control-label Fees
+        label.col-md-4.control-label Minimum Annual Revenue
         .col-md-4.inputGroupContainer
           .input-group
             span.input-group-addon
